# GVM-Combinations

./: .gitignore  GVM_combination.py  LICENSE  README.md  combination_paper.ipynb  combination_tests.ipynb  gvm_toolkit.py  lhc_test.ipynb  pyproject.toml  requirements.txt  setup.py  setup.sh
.claude/: settings.json
.ipynb_checkpoints/: lhc_test-checkpoint.ipynb
bartlett_files/: NEW_1.json  NEW_2.json  standard.json
gvm/: config.py  fit_results.py  gmv.py  gvm_toolkit.py  likelihood.py  minuit_wrapper.py
input_files/: CMSJES.txt  CMSbHad.txt  CR.txt  LHC_mass_combination.yaml  LHC_mass_combination_cov.yaml  btag.txt  config_lhc.txt  config_lhc_cov.txt  data_atlas.txt  data_lhc.txt  pileup.txt
input_files/correlations/: ME.txt  PDF.txt  ptmiss.txt
input_files_old/: JER.txt  LHCJES2.txt  LHCJES3.txt  LHCbJES.txt  LHCgJES.txt  LHCrad.txt  bkgData.txt  bkgMC.txt  data_cms.txt  leptons.txt  other.txt
notebooks/top-mass/: top-mass-combination.md  top_mass_combination.ipynb
notebooks/top-mass/input_files/: LHC_comb.yaml  LHC_comb_fictitious_meas.yaml
notebooks/toy/: toy_tutorial.ipynb  tutorial.md
notebooks/toy/input_files/: diag_corr.yaml  full_corr.yaml  hybrid_corr.yaml  stat_cov.yaml  toy4.yaml
runs/: run.py  scan.py
runs/top_mass_outlier/input/: LHC_comb_fictitious_meas.yaml
src/gvm/: __init__.py  combination.py  config.py  minuit_wrapper.py
tutorials/top-mass/: test_run.py  top-mass-combination.ipynb  top-mass-combination.md
tutorials/toy/: correlations_tutorial.ipynb  correlations_tutorial.md  toy_example.ipynb  tutorial.ipynb  tutorial.md
(+52 files in other folders)
