[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "gvm"
version = "0.1.0"
description = "Gamma Variance Model for combining correlated measurements"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "PyYAML",
    "iminuit",
    "scipy",
    "matplotlib",
]

[tool.setuptools.packages.find]
where = ["src"]
